# IPlateRecognize

./: CMakeLists.txt  IPlateRecognizeTest.cpp  Makefile  plateRecognize.py
include/: DllPlateDetection2015.h  FastDeskew.h  FineMapping.h  IDllPlateDetection2015.h  IPlateRecognize.h  Pipeline.h  PlateDetection.h  PlateInfo.h  PlateRecognize.h  SegmentationFreeRecognizer.h  util.h
python/: PyIPlateRecognize.cpp
src/: DllPlateDetection2015.cpp  FastDeskew.cpp  FineMapping.cpp  PlateDetection.cpp  PlateRecognize.cpp  SegmentationFreeRecognizer.cpp
testDllPlateDtection2015/: testDllPlateDtection2015.cpp
